app/assets/stylesheets/home.css.scss
body.home {

  .navbar {
    @include box-shadow(rgba(black, .5) 0 0 8px);
  }

  .hero-unit {
    margin-bottom: $base-spacing-unit * 1.5;
  }

  .about_items {
    text-align: center;

    h2 {
      @include font-size($h1-size);
      display: inline-block;
      padding: 0 $half-spacing-unit;
      border-bottom: none;
      background: white;

      &:after {
        content: '';
        position: absolute;
        z-index: -1;
        margin-top: - $base-spacing-unit * 1.5;
        left: 0;
        right: 0;
        display: block;
        border-top: 1px solid rgba(black, .25);
      }
    }

    p {
      text-align: left;
    }
  }

  .partners {
    text-align: center;
    height: $base-spacing-unit * 4;

    ul {
      @extend %unstyled-list;
      @include clearfix;
      display: inline-block;
      margin-bottom: 0;
      font-family: $alt-font-family;
      font-size: $h4-size;
      line-height: $base-line-height;
    }

    li {
      float: left;
      text-align: left;
    }

    a {
      @include color-link(rgba(black, .35), $link-hover);
      display: inline-block;
      padding: $base-spacing-unit;
    }

    .img,
    .name {
      display: inline-block;
      vertical-align: middle;
    }

    .img {
      margin-right: $half-spacing-unit;
      line-height: 0;
    }

    img { height: $base-spacing-unit * 2; }

    @include media-query(palm) {
      height: auto;

      ul {
        float: none;
        display: block;
      }

      li  { float: none; }
      a   { padding: $half-spacing-unit; }
    }
  }

}

